server/compilers/goLiteJS/src/test/ml2/valid/valreturn4.go
package main
//Return on a for true statement

func main() bool{
    var a bool = true;
    switch a {
        case true:
            return a;
        case false:
            return a;
        default:
            return a;
    } 
}
