server/compilers/goLiteJS/src/test/ml2/invalid/binary4.go
// invalid || arguments
package main

func main() {
    _ = true || "asdf"
}
